--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     box-sizing: border-box;
 }
 
-body {
+html, body {
     width: 100%;
     height: 100%;
     background-color: var(--cor2);
@@ -36,15 +36,14 @@ main {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 700px;
+    width: 550px;
     border-radius: 10px;
     background-color: white;
 
 }
 
 picture {
-    width: 350px;
-    /* height: 400px; */
+    width: 50%;
 }
 
 img {
@@ -56,13 +55,88 @@ img {
 .conteudo {
     display: flex;
     flex-direction: column;
-    width: 500px;
-    height: 400px;
+    width: 50%;
     gap: 15px;
     align-items: flex-start;
+    justify-content: center;
+    padding: 25px;
 }
 
-p {
+.titulo > p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-size: 12px;
+    letter-spacing: 5px;
+    color: var(--cor4);
+}
+
+h1 {
+    font-family: 'Fraunces', serif;
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.paragrafo {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 13px;
+    color: var(--cor4);
+    line-height: 1.5;
+}
+
+.precos {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.preco-por {
+    font-family: 'Fraunces', serif;
+    color: var(--cor1);
+    font-size: 25px;
+    padding-right: 15px;
+}
+
+.precos > p {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--cor4);
+    font-size: 12px;
+    text-decoration: line-through;
+}
+
+.button {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--cor1);
+    border-radius: 8px;
+    width: 100%;
+    padding: 12px;
+}
+
+.imagem {
+    display: flex;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+}
+
+img {
+    width: 100%;
+}
+
+.button > p {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    font-size: 12px;
+    padding-left: 10px;
+    font-weight: 700;
+}
+
+.button:hover {
+    cursor: pointer;
+    background-color: var(--cor3);
 }
